--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "ALT in node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node build/host.server",
+    "tsc": "tsc",
+    "typings": "typings install",
+    "update": "node bin/update"
+
   },
   "author": "Craig Nishina <craig.nishina@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "es6-promise": "^3.2.1",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.2"
   },
   "devDependencies": {
     "jasmine": "^2.4.1"
