--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
   },
   "homepage": "https://github.com/cnishina/alt-node#readme",
   "scripts": {
-    "postinstall": "npm run typings && npm run tsc",
+    "postinstall": "npm run tsc",
     "start": "node build/server/host.server",
     "tsc": "tsc",
-    "typings": "typings install",
     "update": "node bin/update"
   },
   "dependencies": {
@@ -24,8 +23,10 @@
     "top-banana-logger": "0.0.4"
   },
   "devDependencies": {
+    "@types/express": "^4.0.33",
+    "@types/jasmine": "^2.5.37",
     "jasmine": "^2.4.1",
-    "typescript": "^1.8.10",
+    "typescript": "^2.0.7",
     "typings": "^1.3.2"
   }
 }
