--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "update": "node bin/update"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "@types/minimist": "^1.1.29",
+    "express": "^4.14.0",
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.33",
     "@types/jasmine": "^2.5.37",
     "jasmine": "^2.4.1",
-    "typescript": "^2.0.7",
-    "typings": "^1.3.2"
+    "typescript": "^2.0.7"
   }
 }
