--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "homepage": "https://github.com/alt-locator/alt-node#readme",
   "scripts": {
     "checks": "npm run tslint && npm run format_enforce",
-    "e2e": "jasmine JASMINE_CONFIG_PATH=e2e/support/jasmine.json",
+    "e2e": "jasmine JASMINE_CONFIG_PATH=spec/e2e/support/jasmine.json",
     "format": "gulp format",
     "format_enforce": "gulp format:enforce",
-    "jasmine": "jasmine JASMINE_CONFIG_PATH=spec/support/jasmine.json",
     "pretest": "npm run checks && npm run format && npm run tsc",
-    "test": "npm run jasmine && npm run e2e",
+    "test": "npm run unit && npm run e2e",
     "tslint": "gulp tslint",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "unit": "jasmine JASMINE_CONFIG_PATH=spec/unit/support/jasmine.json"
   },
   "dependencies": {
     "express": "^4.14.0",
