--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "format_enforce": "gulp format:enforce",
     "int": "jasmine JASMINE_CONFIG_PATH=spec/int/support/jasmine.json",
     "pretest": "npm run checks && npm run format && npm run tsc",
-    "test": "npm run int && npm run e2e",
+    "test": "npm run unit && npm run int && npm run e2e",
     "tslint": "gulp tslint",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "unit": "jasmine JASMINE_CONFIG_PATH=spec/unit/support/jasmine.json"
   },
   "dependencies": {
     "express": "^4.14.0",
